--- a/ForgeBeekeepingVR/Assembly-CSharp.csproj
+++ b/ForgeBeekeepingVR/Assembly-CSharp.csproj
@@ -85,17 +85,23 @@
     <Compile Include="Assets\HurricaneVR\TechDemo\Scripts\DemoManualTeleport.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\HurricaneVR\Framework\SFX\license.txt" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\NMWindNoShiver.cginc" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Tree_Leaves_Specular.shader" />
     <None Include="Assets\HurricaneVR\Third-Party Notices.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\NM_indirect.cginc" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Advanced Grass Standard.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Advanced Grass Light.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\NatureManufacture Assets\Object Shaders\Standard_Metalic_Snow.shader" />
     <None Include="Assets\NatureManufacture Assets\Third-Party Notices 2.txt" />
     <None Include="Assets\NatureManufacture Assets\Forest Environment Dynamic Nature\HD and URP Support Packs\README -12.1 URP RP FOREST IMPORT AND TIPS.txt" />
     <None Include="Assets\HurricaneVR\TechDemo\Shaders\Hologram Simple.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\NatureManufacture Assets\Object Shaders\Standard_Specular_Snow.shader" />
     <None Include="Assets\NatureManufacture Assets\Third-Party Notices.txt" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Cross_Model_Shader.shader" />
@@ -105,19 +111,34 @@
     <None Include="Assets\NatureManufacture Assets\Forest Environment Dynamic Nature\HD and URP Support Packs\About SRP import.txt" />
     <None Include="Assets\HurricaneVR\Framework\Models\OculusCustomHands\license.txt" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Advanced Grass Specular.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
+    <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Tree_Bark_Metalic.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\NatureManufacture Assets\Object Shaders\Standard_Metalic_Snow CutOut.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\NatureManufacture Assets\Forest Environment Dynamic Nature\README - About asset content and setup.txt" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Tree_Bark_Specular.shader" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\Tree_Leaves_Metalic.shader" />
+    <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\NatureManufacture Assets\Foliage Shaders\NMWindTouchRect.cginc" />
     <None Include="Assets\NatureManufacture Assets\Forest Environment Dynamic Nature\R.A.M Non Tesseled trial\Shaders\Water Swamp Offset Vertex Color Flow.shader" />
     <None Include="Assets\NatureManufacture Assets\Object Shaders\NM_indirect.cginc" />
     <None Include="Assets\HurricaneVR\Framework\Resources\HVRLatestReleaseNotes.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
     <None Include="Assets\NatureManufacture Assets\Object Shaders\Standard_Metallic_Road_Transparent.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
     <None Include="Assets\NatureManufacture Assets\Forest Environment Dynamic Nature\HD and URP Support Packs\README - 12.1 HD RP FOREST IMPORT.txt" />
     <None Include="Assets\NatureManufacture Assets\Object Shaders\Standard_Specular_Snow CutOut.shader" />
+    <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
     <None Include="Assets\NatureManufacture Assets\Forest Environment Dynamic Nature\R.A.M Non Tesseled trial\Shaders\Water River Offset Vertex Color Flow.shader" />
+    <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
