--- a/ForgeBeekeepingVR/Oculus.Platform.csproj
+++ b/ForgeBeekeepingVR/Oculus.Platform.csproj
@@ -58,8 +58,8 @@
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\MatchmakingAdminSnapshotCandidate.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\PingResult.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\CalApplicationFinalized.cs" />
-    <Compile Include="Assets\Oculus\Platform\Scripts\Encoder.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\Party.cs" />
+    <Compile Include="Assets\Oculus\Platform\Scripts\Encoder.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\RoomType.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\CloudStorageConflictMetadata.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\InvitePanelResultInfo.cs" />
@@ -78,8 +78,8 @@
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\LivestreamingApplicationStatus.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\ChallengeViewerFilter.cs" />
     <Compile Include="Assets\Oculus\Platform\Samples\VrBoardGame\Scripts\PlatformManager.cs" />
-    <Compile Include="Assets\Oculus\Platform\Scripts\Models\Purchase.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\ServiceProvider.cs" />
+    <Compile Include="Assets\Oculus\Platform\Scripts\Models\Purchase.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\NetSyncOptions.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\VoipMuteState.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\PartyID.cs" />
@@ -148,11 +148,11 @@
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\LinkedAccount.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\NetSyncSession.cs" />
     <Compile Include="Assets\Oculus\Platform\Samples\VrHoops\Scripts\P2PNetworkGoal.cs" />
-    <Compile Include="Assets\Oculus\Platform\Scripts\PlatformInternal.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\BufferedAudioStream.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\CloudStorageUpdateResponse.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\NetworkingPeer.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\Models\BlockedUser.cs" />
+    <Compile Include="Assets\Oculus\Platform\Scripts\PlatformInternal.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\LaunchResult.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\LivestreamingMicrophoneStatus.cs" />
     <Compile Include="Assets\Oculus\Platform\Scripts\AbuseReportVideoMode.cs" />
@@ -526,8 +526,20 @@
     <Reference Include="HurricaneVR.Update">
       <HintPath>Assets\HurricaneVR\Framework\Editor\Libs\HurricaneVR.Update.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Burst.Cecil.Pdb">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Pdb.dll</HintPath>
+    </Reference>
     <Reference Include="ReportGeneratorMerged">
       <HintPath>Library\PackageCache\com.unity.testtools.codecoverage@1.2.2\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil.Mdb">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil.Rocks">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Rocks.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Android.Types">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.16f1\Editor\Data\PlaybackEngines\AndroidPlayer\Unity.Android.Types.dll</HintPath>
