--- a/ForgeBeekeepingVR/HurricaneVR.Editor.csproj
+++ b/ForgeBeekeepingVR/HurricaneVR.Editor.csproj
@@ -66,8 +66,8 @@
     <Compile Include="Assets\HurricaneVR\Framework\Editor\LayerMaskDrawer.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRRotationLimiterEditor.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\EmbeddedAssetEditor.cs" />
-    <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRHandSetup.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRCockingHandleEditor.cs" />
+    <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRHandSetup.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRHandPoserEditor.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRManagementWindow.cs" />
     <Compile Include="Assets\HurricaneVR\Framework\Editor\HVRSetupWindow.cs" />
@@ -364,8 +364,20 @@
     <Reference Include="HurricaneVR.Update">
       <HintPath>Assets\HurricaneVR\Framework\Editor\Libs\HurricaneVR.Update.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Burst.Cecil.Pdb">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Pdb.dll</HintPath>
+    </Reference>
     <Reference Include="ReportGeneratorMerged">
       <HintPath>Library\PackageCache\com.unity.testtools.codecoverage@1.2.2\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil.Mdb">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Mdb.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Burst.Cecil.Rocks">
+      <HintPath>Library\PackageCache\com.unity.burst@1.8.2\Unity.Burst.CodeGen\Unity.Burst.Cecil.Rocks.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
