--- a/ForgeBeekeepingVR/Packages/manifest.json
+++ b/ForgeBeekeepingVR/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.feature.vr": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.probuilder": "5.0.6",
     "com.unity.render-pipelines.universal": "12.1.8",
     "com.unity.terrain-tools": "4.0.3",
     "com.unity.textmeshpro": "3.0.6",
