Beekeeping | Lighting Rework & Beginning of Frame Placement Mechanics

--- a/ForgeBeekeepingVR/Assembly-CSharp.csproj
+++ b/ForgeBeekeepingVR/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Oculus\SampleFramework\Core\HandsInteraction\Scripts\Tools\InteractableTool.cs" />
     <Compile Include="Assets\Oculus\SampleFramework\Core\Video\Plugins\Android\NativeVideoPlayer.cs" />
     <Compile Include="Assets\HurricaneVR\TechDemo\Scripts\DemoKeypadButton.cs" />
+    <Compile Include="Assets\Scripts\FramePlacerController.cs" />
     <Compile Include="Assets\Scripts\HoneyStrainer.cs" />
     <Compile Include="Assets\Oculus\SampleFramework\Usage\TouchPro\Scripts\Ui\UiAxis1dInspector.cs" />
     <Compile Include="Assets\Oculus\Voice\Lib\Wit.ai\AssemblyInfo.cs" />
