--- a/.gitignore
+++ b/.gitignore
@@ -1260,3 +1260,7 @@ ForgeBeekeepingVR/VoiceSDK.Runtime.csproj
 ForgeBeekeepingVR/ZibraAILiquid.csproj
 ForgeBeekeepingVR/ZibraAILiquid.Samples.csproj
 ForgeBeekeepingVR/ZibraAILiquid.Settings.Editor.csproj
+ForgeBeekeepingVR/.vs/ForgeBeekeepingVR/v17/Browse.VC.opendb
+ForgeBeekeepingVR/.vs/ForgeBeekeepingVR/v17/Browse.VC.db-wal
+ForgeBeekeepingVR/.vs/ForgeBeekeepingVR/v17/Browse.VC.db-shm
+ForgeBeekeepingVR/.vs/ForgeBeekeepingVR/v17/Browse.VC.db
